# rpg_game

./: pyproject.toml
rpg/: battle.py  character.py  item.py  magic.py  main.py
tests/: magic.py  test_character.py  test_item.py
