[tool.poetry]
name = "class-rpg-game"
version = "0.1.0"
description = "A game created by my Grade 12b class"
authors = ["mrgallo <daniel.gallo@ycdsbk12.ca>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pycodestyle = "^2.8.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
© 2021 GitHub, Inc.
Terms
Privacy
Security
